[gd_scene load_steps=3 format=2]

[ext_resource path="res://Prueba00/Escenas/inicioPresentacion.gd" type="Script" id=1]
[ext_resource path="res://Prueba00/Images/interfazDeUsuarioDesarrollo.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 1080.0
margin_bottom = 720.0

[node name="TextureRect" type="TextureRect" parent="ViewportContainer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Playbutton" type="Button" parent="ViewportContainer/TextureRect"]
margin_left = 490.0
margin_top = 335.0
margin_right = 540.0
margin_bottom = 360.0
rect_scale = Vector2( 2, 2 )
size_flags_vertical = 0
text = "Play"

[node name="Button" type="Button" parent="ViewportContainer/TextureRect"]
margin_left = 490.0
margin_top = 396.0
margin_right = 540.0
margin_bottom = 421.0
rect_scale = Vector2( 2, 2 )
text = "Load"

[node name="Exitbutton0" type="Button" parent="ViewportContainer/TextureRect"]
margin_left = 490.0
margin_top = 460.0
margin_right = 540.0
margin_bottom = 485.0
rect_scale = Vector2( 2, 2 )
size_flags_vertical = 0
text = "Exit"

[connection signal="pressed" from="ViewportContainer/TextureRect/Playbutton" to="." method="_on_Playbutton_pressed"]
[connection signal="pressed" from="ViewportContainer/TextureRect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ViewportContainer/TextureRect/Exitbutton0" to="." method="_on_Exitbutton0_pressed"]
[connection signal="pressed" from="ViewportContainer/TextureRect/Exitbutton0" to="." method="_on_Playbutton_pressed"]
